@@ -1,9 +1,11 @@
 package com.example.restaurantmanagement.service.impl;
 
 import com.example.restaurantmanagement.dto.response.TopSellingItemResponse;
+import com.example.restaurantmanagement.exception.BadRequestException;
 import com.example.restaurantmanagement.repository.OrderItemRepository;
 import com.example.restaurantmanagement.service.StatisticsService;
 import lombok.RequiredArgsConstructor;
+import org.springframework.data.domain.PageRequest;
 import org.springframework.stereotype.Service;
 
 import java.math.BigDecimal;
@@ -14,11 +16,13 @@ import java.util.List;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.stream.Collectors;
 
+
 @Service
 @RequiredArgsConstructor
 public class StatisticsServiceImpl implements StatisticsService {
 
     private final OrderItemRepository orderItemRepository;
+    private static final int MAX_LIMIT = 50;
 
     @Override
     public List<TopSellingItemResponse> getTopSellingItemsThisWeek(int limit) {
@@ -43,17 +47,23 @@ public class StatisticsServiceImpl implements StatisticsService {
     @Override
     public List<TopSellingItemResponse> getTopSellingItemsCustomRange(
             LocalDateTime startDate, LocalDateTime endDate, int limit) {
+        if (startDate.isAfter(endDate)) {
+            throw new BadRequestException("startDate must be before endDate");
+        }
         return getTopSellingItems(startDate, endDate, limit);
     }
 
     private List<TopSellingItemResponse> getTopSellingItems(
             LocalDateTime startDate, LocalDateTime endDate, int limit) {
 
-        List<Object[]> results = orderItemRepository.findTopSellingItems(startDate, endDate);
+        int safeLimit = Math.min(limit, MAX_LIMIT);
+
+        List<Object[]> results = orderItemRepository.findTopSellingItems(
+                startDate, endDate, PageRequest.of(0, limit)
+        );
 
         AtomicInteger rank = new AtomicInteger(1);
         return results.stream()
-                .limit(limit)
                 .map(row -> TopSellingItemResponse.builder()
                         .rank(rank.getAndIncrement())
                         .menuItemId((Integer) row[0])
@@ -62,7 +72,6 @@ public class StatisticsServiceImpl implements StatisticsService {
                         .imageUrl((String) row[3])
                         .totalQuantitySold((Long) row[4])
                         .totalRevenue((BigDecimal) row[5])
-                        .build())
-                .collect(Collectors.toList());
+                        .build()).toList();
     }
 }
